# pig-portal

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  Makefile  README.md  alembic.ini  requirements.txt
alembic/: env.py
app/: main.py
backend/: .env.example  Dockerfile  README.md  alembic.ini  e2e.py  pigfarm.db  pyproject.toml  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20250909_000001_create_users.py
backend/app/: config.py  db.py  deps.py  main.py  roles.py  security.py
backend/app/api/: errors.py
backend/app/api/v1/: breeding.py  files.py  health.py  health_events.py  pigs.py  reports.py  settings.py  tasks.py  weights.py
backend/app/core/: config.py  logging.py
backend/app/db/: __init__.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 0001_initial.py  0002_add_weaned_to_litters.py
backend/app/models/: __init__.py  breeding.py  file.py  health.py  litter.py  pig.py  task.py  user.py  weight.py
backend/app/routers/: auth.py
backend/app/schemas/: __init__.py  breeding.py  file.py  health.py  litter.py  pig.py  settings.py  task.py  user.py  weight.py
backend/app/services/: breeding.py  files.py
backend/tests/e2e/: conftest.py  test_auth.py  test_breeding_litters.py  test_family.py  test_files.py  test_health.py  test_import_export.py  test_pigs.py  test_reports.py  test_tasks.py  test_weights.py
docs/: QA_SMOKE.md
frontend/: Dockerfile  package-lock.json  package.json  playwright.config.ts  tailwind.config.js
infrastructure/: Caddyfile  docker-compose.yml
(+53 files in other folders)
