[tool.poetry]
name = "pig-farm-backend"
version = "0.1.0"
description = "Pig farm management API"
authors = ["Demo <demo@example.com>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {version = "^0.30.0", extras = ["standard"]}
sqlalchemy = "^2.0.30"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.1"
asyncpg = "^0.29.0"
alembic = "^1.13.0"
passlib = {version="^1.7.4", extras=["bcrypt"]}
python-jose = {version="^3.3.0", extras=["cryptography"]}
httpx = "^0.27.0"
tenacity = "^9.0.0"
boto3 = "^1.34.0"
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
